<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/content_padding"
    tools:context="com.company.xpertech.xpertech.EnterCodeActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/intro_enter_code"
        android:textColor="@android:color/black"
        android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium" />

    <EditText
        android:id="@+id/user_qr_accNum"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/fab_margin"
        android:inputType="number"
        android:ems="10"/>

    <Button
        android:layout_marginTop="@dimen/intro_padding"
        android:id="@+id/btn_enter_accNum"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn_enter_code"/>

    <Button
        android:id="@+id/btn_enter_cancel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn_cancel"/>
</LinearLayout>
